2010-05-27  Kenichi Handa  <handa@m17n.org>

	* language/hebrew.el (hebrew-shape-gstring): Check if a glyph
	element of GSTRING is nil.

2010-05-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-forward-token-function)
	(smie-backward-token-function): New vars.
	(smie-backward-sexp, smie-forward-sexp)
	(smie-indent-hanging-p, smie-indent-calculate): Use them.
	(smie-default-backward-token): Rename from smie-backward-token and
	skip comments.
	(smie-default-forward-token): Rename from smie-forward-token and
	skip comments.
	(smie-next-sexp): Handle nil results from next-token.
	(smie-indent-calculate): Add a new case for special `fixindent' comments.

2010-05-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/ada-xref.el (ada-gnat-parse-gpr):
	* emulation/edt.el (edt-load-keys): Avoid (expand-file-name ".").

2010-05-26  Glenn Morris  <rgm@gnu.org>

	* emulation/edt.el (edt-load-keys): Use locate-library.

2010-05-25  Chong Yidong  <cyd@stupidchicken.com>

	* log-edit.el (log-edit-strip-single-file-name): Default to nil.
	(log-edit-changelog-entries): Doc fix.
	(log-edit-changelog-insert-entries): Args changed.
	Rename relative filenames in ChangeLog entries.  Delete tabs.
	(log-edit-insert-changelog-entries): Reorganize return value of
	`log-edit-changelog-entries' to pass filenames to
	log-edit-changelog-insert-entries.

2010-05-25  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	* dired.el (dired-mode-map): Rebind "\C-t\C-t" from
	`image-dired-dired-insert-marked-thumbs' to
	`image-dired-dired-toggle-marked-thumbs'.

	* image-dired.el: Require cl when compiling.
	(image-dired-dired-toggle-marked-thumbs): Rename from
	`image-dired-dired-insert-marked-thumbs'.  Add ARG.  Doc fix.
	Use interactive spec "P".  Set LOCALP arg of `dired-get-filename'
	to 'no-dir.  Skip files whose names don't match
	`image-file-name-regexp'.  When file has a thumbnail overlay,
	delete it.  (Bug#5270)

2010-05-25  Juri Linkov  <juri@jurta.org>
